--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
             minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
         <title>Donamaid</title>
+        <link href="https://fonts.googleapis.com/css?family=Asap|Leckerli+One|Open+Sans+Condensed:300|Tinos" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+       <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>-->
     </head>
     <body>
-        
+        <div id="app"></div>
         <script src="/app/bundle.js"></script>
     </body>
 
